Bug 106253 - Huawei modem doesn't recognized when strict filter policy enabled
Summary: Huawei modem doesn't recognized when strict filter policy enabled
Status: RESOLVED FIXED
Alias: None
Product: ModemManager
Classification: Unclassified
Component: plugins (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: ModemManager bug user
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-26 11:52 UTC by Ricardo Ribalda
Modified: 2018-05-07 19:50 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Device information (25.38 KB, text/plain)
2018-04-26 11:52 UTC, Ricardo Ribalda
Details
policy default (162.23 KB, text/plain)
2018-04-26 11:56 UTC, Ricardo Ribalda
Details
policy strict (35.50 KB, text/plain)
2018-04-26 11:56 UTC, Ricardo Ribalda
Details

Description Ricardo Ribalda 2018-04-26 11:52:17 UTC
Very similar to #106234 , ModemManager does not enable my Huawei modem from Telmore.
Comment 1 Ricardo Ribalda 2018-04-26 11:52:39 UTC
Created attachment 139129 [details]
Device information
Comment 2 Ricardo Ribalda 2018-04-26 11:56:14 UTC
Created attachment 139130 [details]
policy default
Comment 3 Ricardo Ribalda 2018-04-26 11:56:32 UTC
Created attachment 139131 [details]
policy strict
Comment 4 Ricardo Ribalda 2018-04-26 11:57:41 UTC
By default Debian launchs Modem Manager with policy strict.

Version used:

ricardo@neopili:~$ sudo dpkg -l modemmanager
Desired=Unknown/Install/Remove/Purge/Hold
| Status=Not/Inst/Conf-files/Unpacked/halF-conf/Half-inst/trig-aWait/Trig-pend
|/ Err?=(none)/Reinst-required (Status,Err: uppercase=bad)
||/ Name              Version       Architecture  Description
+++-=================-=============-=============-=======================================
ii  modemmanager      1.7.990-1     amd64         D-Bus service for managing modems


Thanks!
Comment 5 Aleksander Morgado 2018-04-26 12:23:33 UTC
Yep, same thing as in #106234. So far, the only thing we can currently say is that the STRICT filter works as expected. We'll need to find a way to detect these devices.
Comment 6 Aleksander Morgado 2018-05-07 19:50:00 UTC
We actually had a bug in the way kernel drivers are matched. It's now fixed in MM git master and will be released with 1.8.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.